<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.MenuSecundarioFragment">

    <TextView
            android:id="@+id/tv_menu_principal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Menu Principal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" />

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_registrar_venta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_menu_principal"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="25dp"
            app:strokeWidth="2dp"
            app:strokeColor="@color/purple_700"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:src="@drawable/ic_add_circle_outline"
                    android:layout_width="58dp"
                    android:layout_height="58dp"
                    android:id="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" />

            <TextView
                    android:text="@string/registrar_ventas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_registrar_venta"
                    android:layout_marginEnd="8dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/purple_700"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    android:layout_marginStart="16dp" />

            <TextView
                    android:text="@string/menu_detalle_registrar_venta"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_detalle_registrar_venta"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_registrar_venta"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    android:layout_marginStart="16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/mcv_registrar_venta"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="25dp"
            app:strokeWidth="2dp"
            app:strokeColor="@color/purple_700"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:src="@drawable/ic_info_24"
                    android:layout_width="58dp"
                    android:layout_height="58dp"
                    android:id="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" />

            <TextView
                    android:text="@string/producto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_producto"
                    android:layout_marginEnd="8dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/purple_700"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    android:layout_marginStart="16dp" />

            <TextView
                    android:text="@string/menu_catalo_producto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_sub_producto"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_producto"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    android:layout_marginStart="16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>